--- a/E-commerce-Perfumes Novo/index.html
+++ b/E-commerce-Perfumes Novo/index.html
@@ -18,7 +18,8 @@
 </header>
 
 <body>
-    <h1> Atualização de teste</h1>
+    <h1> Atualização de teste </h1>
+	<h2> Novas atualizações de teste</h2>
 </body>
 
 <footer>
