atualização de teste 2

--- a/E-commerce-Perfumes Novo/index.html
+++ b/E-commerce-Perfumes Novo/index.html
@@ -23,8 +23,10 @@
 	<h3> teste</h3>
 </body>
 
+<script src="main.js"></script>
 <footer>
 	<p class="copyright">&copy; Copyright A Botica - 2023</p>
 </footer>
+
 
 </html>
